--- a/extra_playbooks/roles/kubernetes-apps/traefik-internal/templates/02traefik-internal-service.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/traefik-internal/templates/02traefik-internal-service.yaml.j2
@@ -28,6 +28,8 @@ kind: Ingress
 metadata:
   name: traefik-ingress-lb
   namespace: {{boss__traefik__internal__namespace_name}}
+  labels:
+    traffic-type: traefik-internal
 spec:
   rules:
   - host: traefik-internal.{{domain_root}}
