--- a/extra_playbooks/roles/kubernetes-apps/weave-scope/templates/weave-calico-networking.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/weave-scope/templates/weave-calico-networking.yaml.j2
@@ -372,11 +372,13 @@ kind: Ingress
 metadata:
   name: scope-dashboard
   namespace: weave
+{% if boss__weave__scope__enable_ingress_traefik == "enabled" %}
   annotations:
     traefik.frontend.rule.type: PathPrefix
+{% endif %}
 spec:
   rules:
-  - host: scope.internal.scarlettlab.com
+  - host: scope.{{domain_root}}
     http:
       paths:
       - path: /
