--- a/extra_playbooks/roles/kubernetes-apps/traefik-internal/templates/03traefik-internal-deployment.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/traefik-internal/templates/03traefik-internal-deployment.yaml.j2
@@ -12,7 +12,7 @@ metadata:
   namespace: {{boss__traefik__internal__namespace_name}}
   labels:
     k8s-app: traefik-ingress-lb
-    traffic-type: internal
+    # traffic-type: internal
 spec:
   replicas: 2
   selector:
@@ -23,7 +23,7 @@ spec:
       labels:
         k8s-app: traefik-ingress-lb
         name: traefik-ingress-lb
-        traffic-type: internal
+        # traffic-type: internal
     spec:
       serviceAccountName: traefik-ingress-controller
       terminationGracePeriodSeconds: 60
@@ -41,8 +41,8 @@ spec:
          - name: admin
            containerPort: 8080
         args:
-        # - --api
-        # - --kubernetes
+        - --api
+        - --kubernetes
         - --configfile=/config/traefik.toml
         livenessProbe:
           httpGet:
