--- a/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/prometheus-prometheus.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/prometheus-prometheus.yaml.j2
@@ -56,4 +56,11 @@ spec:
   #     app.kubernetes.io/part-of: ingress-nginx
   #     prometheus: k8s
 
+{% if boss__prometheus__operator__monitoring_spec_additionalScrapeConfigs is defined %}
+  additionalScrapeConfigs:
+{{ boss__prometheus__operator__monitoring_spec_additionalScrapeConfigs | indent( width=4, indentfirst=True,blank=True) }}
+    # name: additional-scrape-configs
+    # key: prometheus-additional.yaml
+{% endif %}
+
   version: v2.5.0
