--- a/extra_playbooks/roles/kubernetes-apps/efk/templates/fluentd-es-ds.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/efk/templates/fluentd-es-ds.yaml.j2
@@ -38,10 +38,19 @@ rules:
   resources:
   - "namespaces"
   - "pods"
+  - "pods/log"
+  - "deployments"
+  - "batch"
+  - "extensions"
+  - "crontabs"
+  - "configmaps"
+  - "secrets"
   verbs:
   - "get"
-  - "watch"
   - "list"
+  - "post"
+  - "update"
+  - "watch"
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
@@ -124,6 +133,10 @@ spec:
         #   value: "elastic"
         # - name: FLUENT_ELASTICSEARCH_PASSWORD
         #   value: "changeme"
+{% if boss__efk__fluentd_daemon_set_spec_template_spec_securityContext is defined %}
+        securityContext:
+{{ boss__efk__fluentd_daemon_set_spec_template_spec_securityContext | indent( width=8, indentfirst=True,blank=True) }}
+{% endif %}
         resources:
           limits:
             memory: {{boss__efk__fluentd_mem_limit}}
@@ -131,32 +144,14 @@ spec:
           requests:
             cpu: {{boss__efk__fluentd_cpu_requests}}
             memory: {{boss__efk__fluentd_mem_requests}}
+{% if boss__efk__fluentd_daemon_set_spec_template_spec_volumeMounts is defined %}
         volumeMounts:
-        - name: varlog
-          mountPath: /var/log
-        - name: varlibdockercontainers
-          mountPath: /var/lib/docker/containers
-          readOnly: true
-        # - name: libsystemddir
-        #   mountPath: /host/lib
-        #   readOnly: true
-        - name: config-volume
-          mountPath: /etc/fluent/config.d
+{{ boss__efk__fluentd_daemon_set_spec_template_spec_volumeMounts | indent( width=8, indentfirst=True,blank=True) }}
+{% endif %}
       nodeSelector:
         beta.kubernetes.io/fluentd-ds-ready: "true"
       terminationGracePeriodSeconds: 30
+{% if boss__efk__fluentd_daemon_set_spec_template_spec_volumes is defined %}
       volumes:
-      - name: varlog
-        hostPath:
-          path: /var/log
-      - name: varlibdockercontainers
-        hostPath:
-          path: /var/lib/docker/containers
-      # It is needed to copy systemd library to decompress journals
-      # - name: libsystemddir
-      #   hostPath:
-      #     path: /usr/lib64
-      - name: config-volume
-        configMap:
-          # name: fluentd-es-config-v0.1.0
-          name: fluentd-es-config-v0.1.6
+{{ boss__efk__fluentd_daemon_set_spec_template_spec_volumes | indent( width=6, indentfirst=True,blank=True) }}
+{% endif %}
