wip: prometheus_operator: kubernetes-cluster

--- a/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/alertmanager-ingress.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/alertmanager-ingress.yaml.j2
@@ -12,9 +12,11 @@ metadata:
 {% if boss__prometheus__operator__alertmanager_ingress_metadata_annotations is defined %}
   annotations:
 {{ boss__prometheus__operator__alertmanager_ingress_metadata_annotations | indent( width=4, indentfirst=True,blank=True) }}
+{% endif %}
 {% if boss__prometheus__operator__alertmanager_ingress_metadata_labels is defined %}
   labels:
 {{ boss__prometheus__operator__alertmanager_ingress_metadata_labels | indent( width=4, indentfirst=True,blank=True) }}
+{% endif %}
 spec:
   rules:
   - host: {{boss__prometheus__operator__alertmanager_subdomain}}.{{domain_root}}
