--- a/extra_playbooks/roles/kubernetes-apps/calico/templates/calico.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/calico/templates/calico.yaml.j2
@@ -15,7 +15,7 @@ data:
   # To enable Typha, set this to "calico-typha" *and* set a non-zero value for Typha replicas
   # below.  We recommend using Typha if you have more than 50 nodes. Above 100 nodes it is
   # essential.
-  typha_service_name: "none"
+  typha_service_name: "{{boss__calico__typha_service_name}}"
   # Configure the Calico backend to use.
   calico_backend: "bird"
 
@@ -67,13 +67,18 @@ metadata:
   namespace: {{ boss__calico__namespace_name }}
   labels:
     k8s-app: calico-typha
+    # component: calico-typha
+# {% if boss__calico__typha_service_annotations is defined %}
+#   annotations:
+# {{ boss__calico__typha_service_annotations | indent( width=4, indentfirst=True,blank=True) }}
+# {% endif %}
 spec:
   ports:
     - port: 5473
       protocol: TCP
       targetPort: calico-typha
       name: calico-typha
-    - port: 9091
+    - port: 9093
       targetPort: calico-metrics
       name: calico-metrics
       protocol: TCP
@@ -104,12 +109,10 @@ spec:
     metadata:
       labels:
         k8s-app: calico-typha
+{% if boss__calico__typha_deployment_annotations is defined %}
       annotations:
-        # This, along with the CriticalAddonsOnly toleration below, marks the pod as a critical
-        # add-on, ensuring it gets priority scheduling and that its resources are reserved
-        # if it ever gets evicted.
-        scheduler.alpha.kubernetes.io/critical-pod: ''
-        cluster-autoscaler.kubernetes.io/safe-to-evict: 'true'
+{{ boss__calico__typha_deployment_annotations | indent( width=8, indentfirst=True,blank=True) }}
+{% endif %}
     spec:
       nodeSelector:
         beta.kubernetes.io/os: linux
@@ -127,6 +130,9 @@ spec:
         ports:
         - containerPort: 5473
           name: calico-typha
+          protocol: TCP
+        - containerPort: 9093
+          name: calico-metrics
           protocol: TCP
         env:
           # Enable "info" logging by default.  Can be set to "debug" to increase verbosity.
@@ -151,6 +157,8 @@ spec:
           # this opens a port on the host, which may need to be secured.
           - name: TYPHA_PROMETHEUSMETRICSENABLED
             value: "true"
+          # - name: TYPHA_PROMETHEUSMETRICSPORT
+          #  value: "9093"
           - name: TYPHA_PROMETHEUSMETRICSPORT
             value: "9093"
 {% endif %}
@@ -200,6 +208,7 @@ metadata:
   namespace: {{ boss__calico__namespace_name }}
   labels:
     k8s-app: calico-node
+    component: calico-node
 spec:
   selector:
     matchLabels:
@@ -214,10 +223,6 @@ spec:
         k8s-app: calico-node
 {% if boss__calico__node_daemonset_annotations is defined %}
       annotations:
-        # This, along with the CriticalAddonsOnly toleration below,
-        # marks the pod as a critical add-on, ensuring it gets
-        # priority scheduling and that its resources are reserved
-        # if it ever gets evicted.
 {{ boss__calico__node_daemonset_annotations | indent( width=8, indentfirst=True,blank=True) }}
 {% endif %}
     spec:
@@ -299,11 +304,20 @@ spec:
             # Set Felix logging to "info"
             - name: FELIX_LOGSEVERITYSCREEN
               value: "info"
+            # SOURCE: https://docs.projectcalico.org/v3.4/reference/felix/configuration
             - name: FELIX_HEALTHENABLED
               value: "true"
             # Set to true to enable the Prometheus metrics server in Felix. [Default: false]
             - name: FELIX_PROMETHEUSMETRICSENABLED
               value: "true"
+            # Set to false to disable process metrics collection, which the Prometheus client does by default. This reduces the number of metrics reported, reducing Prometheus load. [Default: true]
+            # Enable Prometheus process metrics collection
+            - name: FELIX_PROMETHEUSPROCESSMETRICSENABLED
+              value: "true"
+            # Set to false to disable Go runtime metrics collection, which the Prometheus client does by default. This reduces the number of metrics reported, reducing Prometheus load. [Default: true]
+            - name: FELIX_PROMETHEUSGOMETRICSENABLED
+              value: "false"
+            # TCP port that the Prometheus metrics server should bind to
             - name: FELIX_PROMETHEUSMETRICSPORT
               value: "9091"
           securityContext:
