--- a/extra_playbooks/roles/kubernetes-apps/unifi-exporter/templates/unifi-exporter-secret-config.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/unifi-exporter/templates/unifi-exporter-secret-config.yaml.j2
@@ -2,7 +2,7 @@ listen:
   address: :9130
   metricspath: /metrics
 unifi:
-  address: 192.168.1.8
+  address: http://192.168.1.8:8443
   username: {{unifi_exporter_username}}
   password: {{unifi_exporter_password}}
   site: Default
