wip: unifi-exporter

--- a/extra_playbooks/roles/kubernetes-apps/unifi-exporter/templates/unifi-exporter-secret-config.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/unifi-exporter/templates/unifi-exporter-secret-config.yaml.j2
@@ -1,10 +1,10 @@
 listen:
-  address: :9130
-  metricspath: /metrics
+  address: {{boss__unifi__exporter__listen_address}}
+  metricspath: {{boss__unifi__exporter__listen_metricspath}}
 unifi:
-  address: https://192.168.1.8:8443
+  address: {{boss__unifi__exporter__unifi_address}}
   username: {{unifi_exporter_username}}
   password: {{unifi_exporter_password}}
-  site: Default
-  insecure: false
-  timeout: 5s
+  site: {{boss__unifi__exporter__unifi_site}}
+  insecure: {{boss__unifi__exporter__unifi_insecure}}
+  timeout: {{boss__unifi__exporter__unifi_timeout}}
