wip: unifi-exporter

--- a/extra_playbooks/roles/kubernetes-apps/unifi-exporter/templates/unifi-exporter-secret-config.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/unifi-exporter/templates/unifi-exporter-secret-config.yaml.j2
@@ -6,5 +6,5 @@ unifi:
   username: {{unifi_exporter_username}}
   password: {{unifi_exporter_password}}
   site: {{boss__unifi__exporter__unifi_site}}
-  insecure: {{boss__unifi__exporter__unifi_insecure}}
+  insecure: {{boss__unifi__exporter__unifi_insecure | lower }}
   timeout: {{boss__unifi__exporter__unifi_timeout}}
